--- a/index.html
+++ b/index.html
@@ -73,18 +73,34 @@
 </section>
 
     <section id="about" class="section">
-        <h2 class="section-title">Про мене</h2>
-        <div class="about-container">
-            <div class="about-text">
-                <p>Я створюю цифрові продукти, які поєднують у собі функціональність та естетику. Мій підхід — це чистий код та увага до деталей.</p>
-                <div class="info-grid">
-                    <div class="info-item"><strong>Місто:</strong> Cарни, Україна</div>
-                    <div class="info-item"><strong>Досвід:</strong> 2+ роки</div>
-                    <div class="info-item"><strong>Мови:</strong> Українська, Англійська, Російська</div>
-                </div>
+    <h2 class="section-title">Про мене</h2>
+    <div class="about-container">
+        <div class="about-text reveal">
+            <p>
+                Мені 20 років, 6 із яких я активно працюю у різних сферах. Мій шлях почався у 14, 
+                що загартувало в мені дисципліну та вміння швидко адаптуватися до складних завдань.
+            </p>
+            <p>
+                Окрім технологій, я завжди прагнув глибинного розуміння того, як функціонує світ. 
+                Це привело мене до серйозного захоплення <strong>соціологією</strong>. Моє дослідження 
+                соціальних структур та патернів поведінки навіть вилилося у невелику 
+                <strong><a href = "https://docs.google.com/document/d/1VpAQNurTE_QxAyDuK4SXcmtoupyomV_8vM0irsxrp1I/edit?usp=sharing" target="_blank">наукову роботу</a></strong>.
+            </p>
+            <p>
+                Сьогодні я поєдную аналітичний склад розуму, науковий підхід та практичний досвід 
+                у маркетингу та IT, щоб створювати продукти, які справді розуміють потреби людей.
+            </p>
+            
+            <div class="interests-grid">
+                <div class="interest-tag">Аналіз даних</div>
+                <div class="interest-tag">Соціологія</div>
+                <div class="interest-tag">Психологія поведінки</div>
+                <div class="interest-tag">Логіка</div>
+                <div class="interest-tag">Пошук системних рішень</div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <section id="skills" class="section bg-alt">
     <h2 class="section-title">Мої компетенції</h2>
