--- a/index.html
+++ b/index.html
@@ -181,14 +181,14 @@
 
         <div class="timeline-item reveal">
             <div class="timeline-dot"></div>
-            <div class="timeline-date">З 14 років</div>
+            <div class="timeline-date">З 16 років</div>
             <div class="timeline-content">
                 <h3>Менеджер з продажу</h3>
                 <p><strong>Сфера:</strong> Call-центри</p>
                 <ul>
                     <li>Робота з холодною та гарячою базами клієнтів.</li>
                     <li>Виконання планів продажів та робота з запереченнями.</li>
-                    <li>Розвиток навичок ділової комунікації з раннього віку.</li>
+                    <li>Розвиток навичок ділової комунікації.</li>
                 </ul>
             </div>
         </div>
@@ -203,3 +203,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
